@@ -22,8 +22,8 @@
 #ifdef __MINGW32__
 #define IN_LIBXML
 #endif
-#include "libxml/parser.h"
-#include "libxml/xpath.h"
+#include <libxml/parser.h>
+#include <libxml/xpath.h>
 
 #include "common.h"
 
