@@ -21,8 +21,8 @@
 #ifdef __MINGW32__
 #define IN_LIBXML
 #endif
-#include "libxml/parser.h"
-#include "libxml/xpath.h"
+#include <libxml/parser.h>
+#include <libxml/xpath.h>
 
 /* local */
 #include "common.h"
